# web_backend/controllers/BankService.js
@@ -1,4 +1,5 @@
 'use strict';
+var fabric = require("../fabric");
 var models  = require('../models');
 var Sequelize=require("sequelize");
 
@@ -94,3 +95,38 @@ exports.updateBank = function (req, res, next) { var args=req.swagger.params;
   res.end();
 }
 
+exports.addBank2cc = function (req, res, next) { var args=req.swagger.params;
+  /**
+   * Add a new bank to the store
+   * body Bank Bank object that needs to be added to the store
+   * no response value expected for this operation
+   **/
+  var vals = args.body.value;
+  var bcsNo = "B"+vals.no;
+  var bankvals = {
+    "No" : bcsNo,
+    "Type": "Bank",
+    "DataBank":{
+      "No": vals.no,
+      "Name": vals.name,
+      "Domain": vals.domain,
+      "Address": vals.address,
+      "PostCode": vals.postcode,
+      "Telephone": vals.telephone,
+      "Telefax": vals.telefax,
+      "Remark": vals.remark
+    }
+  };
+  
+  fabric.invoke2cc(req, "saveBCSInfo",[bcsNo, JSON.stringify(bankvals)], function(err, resp) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(resp.result);
+  });
+}
+function getBanks2cc(args, res, next) {
+  var Type = "Bank";//args.Type.value;
+  fabric.invoke2cc(req, "getBCSList",[Type], function(err, resp){
+    res.setHeader('Content-Type', 'application/json');
+    res.end(resp.result);
+  });
+}
